resources/webidl2/test/invalid/idl/const-null.widl
interface MyConstants {
  const MyPrimitive MY_NULL = null;
};
